examples/errors/byteslice.go
package errors

type Slice struct {
	Value []byte
}
